# wallapop-auto-adjust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TECHNICAL_REQUIREMENTS.md  analyze_price_update.py  analyze_requests.py  configure.py  main.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: api_analyzer.py  config.py  price_adjuster.py  session_manager.py  wallapop_client.py
src/wallapop_auto_adjust/: cli.py  wallapop_client.py
tests/: conftest.py  test_access_token_refresh.py  test_config.py  test_cookie_guide_flow.py  test_imports.py  test_price_adjuster.py  test_price_update_payload_logic.py  test_session_manager.py  test_wallapop_client_workflow.py
